--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <script src="code.js" defer></script>
     <title>Snake</title>
 </head>
-<body>
+<body style="background-color:#FFF9EC">
+    <div class="game"><div class="top">Score:</div>
     <div class="container"></div>
+    <div class="buttons"><button id="retry">Retry</div>
+    <div class="credit">Snake: By Jared Sleep</div>
+    </div>
+    
 </body>
 </html>
