--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container"></div>
     <div class="buttons"><button id="retry">Begin</div>
     
-    <div class="credit">Snake: By Jared Sleep</div>
+    <div class="credit">Snake: By Jared H. Sleep</div>
     <label id="speed">Choose speed</label>
         <select id="spad">
             <option value = "low">LOW</option>
